sfSandBoxCode/force-app/main/default/objects/Candidate_Reference__c/Candidate_Reference__c.object-meta.xml
<CustomObject>
    <label>Candidate Reference</label>
    <nameField>
        <displayFormat>REF-{0000000}</displayFormat>
        <label>references Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>