sfSandBoxCode/force-app/main/default/objects/Candidate_Reference__c/fields/Can_Contact__c.field-meta.xml
<CustomField>
    <fullName>Can_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Contact</label>
    <type>Checkbox</type>
</CustomField>