sfSandBoxCode/force-app/main/default/objects/Candidate_Reference__c/fields/Referee_Email__c.field-meta.xml
<CustomField>
    <fullName>Referee_Email__c</fullName>
    <label>Referee Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>