sfSandBoxCode/force-app/main/default/objects/Candidate_Reference__c/fields/Referee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referee_Phone__c</fullName>
    <label>Referee Phone</label>
    <length>60</length>
    <type>Text</type>
</CustomField>