sfSandBoxCode/force-app/main/default/objects/Candidate_Reference__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>120</length>
    <type>Text</type>
</CustomField>